<resources>
    <string name="app_name">FlashCat</string>
    <string name="search_name">Search desk</string>
    <string name="desk_name">Desk</string>
    <string name="new_flashcard">New flashcard</string>
    <string name="notification">Notification</string>
    <string name="edit_desk">Edit Desk</string>
    <string name="practice">Practice</string>
    <string name="test">Test</string>
    <string name="profile">Edit profile</string>
    <string name="storage">Storage</string>
    <string name="setting">Setting</string>
    <string name="dictionary">Dictionary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_desk">DeskActivity</string>
    <string name="title_activity_start_screen">StartScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!--    Strings Start-->
    <string name="welcome_to">Welcome to </string>
    <string name="start_now">Start now</string>
    <!--    Strings SignUp-->
    <string name="create_account">Create your own account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Your email</string>
    <string name="user_name">Username</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype password</string>
    <string name="sign_in">Sign in</string>
    <string name="already">Already have account?</string>
    <!--    Strings Login-->
    <string name="log_into">Log into \n your account</string>
    <string name="user_email">Username/Email</string>
    <string name="remember">Remember me</string>
    <string name="forgot">Forgot password?</string>
    <string name="login">Login</string>
    <string name="local">Use as local user instead</string>
    <string name="sign_up">Sign up</string>
    <string name="do_not_account">Don’t have account?</string>
    <!--    Strings home-->
    <string name="Hi">Hi, </string>
    <string name="name">Tiago.</string>
    <string name="see_all">See All</string>
    <!--    Strings Practice-->
    <string name="question">Total questions</string>
    <string name="answer">Answer with</string>
    <string name="true_false">True/False</string>
    <string name="multiple">Multiple choice</string>
    <string name="match">Match</string>
    <!--    Strings true/false-->
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="true_">True</string>
    <string name="false_">False</string>
    <!--    Strings changePassword-->
    <string name="change">Change</string>
    <string name="old_password">Old password</string>
    <string name="input_old">Input old password</string>
    <string name="input_new">Input new password</string>
    <string name="input_confirm">Input confirm new password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm new password</string>
    <!--    String ueser-->
    <string name="progress">Learning progress</string>
    <string name="complete">Complete</string>
    <string name="on_progress">On progress</string>
    <string name="sync">Sync</string>
    <string name="logout">Log out</string>
    <!--Strings edit profile-->
    <string name="change_image">Change image</string>
    <string name="update_profile">Update</string>
    <!--    Strings storage-->
    <string name="clear">Clear</string>
    <string name="data">Data \n <small>User and application data</small></string>
    <string name="value_data">2,5 MB used</string>
    <string name="cache">Cache \n <small>Dictionary data each time you search a word and you can use it when offline</small></string>
    <string name="delete_data">Delete Data</string>
    <string name="delete_data2">Delete Data &amp; Dictionary cache</string>
    <string name="title_dialog">Confirm</string>
    <string name="supporting_text">Are you sure to delete Data in your application?
\n All data after deleted can not be undo!</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <!--    String notification-->
    <string name="push">Push notification \n <small>Display a badge with the number of unread notifications</small></string>
    <string name="word">Word reminder \n <small>Display a badge with the number of unread notifications</small></string>
    <string name="select_desk_remind">Select Desks to remind</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <!--    Strings flashcard-->
    <string name="done">Done</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <!--    Strings edit desk-->
    <string name="save">Save</string>
    <!--    String word-->
    <string name="create">Create new flashcard</string>
    <!--    String flashcard-->
    <string name="lose">0</string>
    <string name="win">1</string>
    <string name="return_flashcard">Return flashcard before</string>
    <string name="add_to_favorites">Add to favorites </string>
    <!--    String dictionary-->
    <string name="card">Card</string>
    <string name="minus_card">Minus</string>
    <string name="definition_card">Definition</string>
    <string name="recent">Recent</string>
    <string name="delete">Delete</string>
    <string name="arrow">Arrow</string>
    <string name="word_category">Word category</string>
    <!--String setting-->
    <string name="edit_profile">Edit profile</string>
    <string name="account_setting">Account setting</string>
    <string name="change_password">Change password</string>
    <string name="system_settings">System settings</string>
    <string name="notification_settings">Notification settings</string>
    <string name="sound_effect">Sound effect</string>
    <string name="manage_storage">Manage storage</string>
    <string name="dark_mode">Dark mode</string>
    <string name="more">More</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <!--Strings desk-->
    <string name="study">Study</string>
    <string name="create_new">Create new</string>
    <!--    String test-->
    <string name="answerA">AnswerA</string>
    <string name="answerB">AnswerB</string>
    <string name="answerC">AnswerC</string>
    <string name="answerD">AnswerD</string>
    <!--    Answer Method prompt-->
    <string name="answer_method_prompt">Choose a country</string>
    <!--    Answer method-->
    <string-array name="answer_method_arrays">
        <item>Definition</item>
        <item>Term</item>
    </string-array>
    <!--    Practice-->
    <string name="start_test">Start</string>
    <string name="zoom">Zoom</string>

</resources>
