<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.WordActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarWord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/inter_semibold"
        android:minHeight="?attr/actionBarSize"
        android:textSize="25sp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:titleTextColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txt_word"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/card"
                android:fontFamily="@font/inter_semibold"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                />
            <TextView
                android:id="@+id/txt_minus_word"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/minus_card"
                android:fontFamily="@font/inter_medium"
                android:textSize="15sp"
                android:textColor="@color/color_font"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                />
            <ImageButton
                android:id="@+id/btn_volume_term"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@color/transparent"
                android:src="@drawable/volum2"
                android:contentDescription="@string/term"/>
        </LinearLayout>


        <TextView
            android:id="@+id/txt_word_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/word_category"
            android:fontFamily="@font/inter_medium"
            android:textSize="16sp"
            android:textColor="@color/word_category"
            />

        <TextView
            android:id="@+id/txt_definition_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/definition"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:paddingTop="10dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:layout_marginStart="332dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_save_word"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:background="@color/transparent"
            android:contentDescription="@string/save"
            android:src="@drawable/save"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:layout_gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_create_word"
        android:layout_width="301dp"
        android:layout_height="65dp"
        android:background="@drawable/border_desk"
        android:text="@string/create"
        app:backgroundTint="@color/color_button"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbarWord"
        app:layout_constraintVertical_bias="0.906" />
</androidx.constraintlayout.widget.ConstraintLayout>