<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/bord_flashcard">

    <ImageButton
        style="@style/ICON"
        android:layout_width="63dp"
        android:layout_height="57dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:contentDescription="@string/recent"
        android:src="@drawable/recent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/card"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/txt_minus_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/minus_card"
            android:textColor="@color/color_font"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_definition_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/definition"
            android:textColor="@color/color_font"
            android:textSize="14sp"

            />
    </LinearLayout>

    <ImageButton
        android:id="@+id/btn_delete_card"
        style="@style/ICON"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparent"
        android:contentDescription="@string/recent"
        android:src="@drawable/close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>