<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".Activity.SettingUser.StorageActivity">
    <LinearLayout
        android:id="@+id/toolbar_Storage"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        tools:layout_editor_absoluteX="132dp">

        <ImageButton
            android:id="@+id/back_storage"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/transparent"
            android:src="@drawable/back"
            style="@style/ICON"
            android:contentDescription="@string/back"/>

        <TextView
            android:layout_width="240dp"
            android:layout_height="58dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/storage"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/action_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/SAVE"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:text="@string/clear"
            android:backgroundTint="@color/transparent"
            android:textColor="@color/color_font"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="371dp"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:layout_marginStart="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147">

        <TextView
            android:layout_width="431dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/data"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_data"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/value_data"
            android:fontFamily="@font/inter"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="371dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.301">

        <TextView
            android:layout_width="431dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/cache"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_cache"
            android:layout_width="85dp"
            android:layout_height="55dp"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/value_data"
            android:textSize="14sp" />
    </LinearLayout>
    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>