<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bord_flashcard"
    android:layout_gravity="center"
    android:layout_marginBottom="30dp"
    style="@style/SCREEN">

    <EditText
        android:id="@+id/ed_term_edit_flashcard"
        android:layout_width="355dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/term"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/inter"
        android:gravity="center_horizontal"
        android:text="@string/front"
        android:textColor="@color/color_font"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ed_term_edit_flashcard" />

    <EditText
        android:id="@+id/ed_definition_edit_flashcard"
        android:layout_width="355dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/definition"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_term_edit_flashcard" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/inter"
        android:gravity="center_horizontal"
        android:text="@string/back"
        android:textColor="@color/color_font"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ed_definition_edit_flashcard" />
</androidx.constraintlayout.widget.ConstraintLayout>